added add option

--- a/todo/angular.json
+++ b/todo/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "todo"
+    }
+  },
+  "defaultProject": "todo",
+  "cli": {
+    "analytics": "1f076b39-7d70-465f-a0e3-9c4e75f88371"
+  }
 }
